# L3-Compilation

./: exo1.l  exo1.old  exo2.l  main  makefile  test.txt
Projet/: README.md  c3a.l  c3a.tab.c  c3a.tab.h  c3a.y  c3a.yy.c  comp_c3a.tab.h  comp_c3a.y  comp_iimp.l  comp_iimp.tab.h  comp_iimp.y  iimp.l  iimp.output  iimp.tab.c  iimp.tab.h  iimp.y  iimp.yy.c  makefile
Projet/iimp/: imp.c
Projet/include/: Ast.c  Ast.h  C3A.c  C3A.h  Comp_C3A.c  Comp_C3A.h  Comp_IMP.c  Comp_IMP.h  Env.c  Env.h  IMP.c  IMP.h  Quads.c  Quads.h  utils.h
Projet2/: ..gitignore.swp  CMakeLists.txt  README.md  c3a.l  c3ainterpret.tab.c  c3ainterpret.tab.h  c3ainterpret.y  lex.yy.c  makefile  ppascal.l  ppascal.y  ppinterpret.tab.c  ppinterpret.tab.h  ppinterpret.y  pptoc3a.y
Projet2/include/: Ast.c  Ast.h  C3A.c  C3A.h  Comp_Pascal.c  Comp_Pascal.d  Comp_Pascal.h  Comp_Pascal.p  Env.c  Env.h  Env_C3A.c  Env_C3A.h  Function.c  Function.h  Pascal.c  Pascal.h  Pascal_C3A.c  Pascal_C3A.h  Quads.c  Quads.h  Semantic.c  Semantic.d  Semantic.h  Stack.c  Stack.h  Stack_C3A.c  Stack_C3A.h  Variable.c  Variable.h  Verification.c  Verification.h  test.c  testStack.c
Projet2/test/: comp_pp  int_c3a  int_pp  interc3a  interpp  test  test_c3a  test_c3a2  tradpp2c3a
Projet2/test/TestCodes/: pex1.pp  pex2.pp  pex3.pp
Projet2/test/code/: pex1.pp  pex10.pp  pex11.pp  pex12.pp  pex2.pp  pex21.pp  pex3.pp  pex4.pp  pex6.pp  pex7.pp  pex8.pp  pex9.pp
Projet2/test/exemples/: pex10.pp  pex21.pp  pex22.pp  pex9.pp
Projet2/test/results/: compC3A.txt  res.txt
TD/: exo3.l  main  makefile  test.txt
(+43 files in other folders)
